--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,23 +1,35 @@
 @font-face 
-	font-family: "Roboto"
-	src: url("../fonts/Roboto-Regular.ttf")
+	font-family: "Montserrat"
+	src: url("../fonts/Montserrat-Light.ttf")
+	font-style: normal
+	font-weight: 300
+
+@font-face 
+	font-family: "Montserrat"
+	src: url("../fonts/Montserrat-Regular.ttf")
 	font-style: normal
 	font-weight: 400
 
 @font-face 
-	font-family: "Roboto"
-	src: url("../fonts/Roboto-Italic.ttf")
-	font-style: italic
-	font-weight: 400
+	font-family: "Montserrat"
+	src: url("../fonts/Montserrat-Medium.ttf")
+	font-style: normal
+	font-weight: 500
 
 @font-face 
-	font-family: "Roboto"
-	src: url("../fonts/Roboto-Bold.ttf")
+	font-family: "Montserrat"
+	src: url("../fonts/Montserrat-SemiBold.ttf")
+	font-style: normal
+	font-weight: 600
+
+@font-face 
+	font-family: "Montserrat"
+	src: url("../fonts/Montserrat-Bold.ttf")
 	font-style: normal
 	font-weight: 700
 
 @font-face 
-	font-family: "Roboto"
-	src: url("../fonts/Roboto-BoldItalic.ttf")
-	font-style: italic
-	font-weight: 700
+	font-family: "Montserrat"
+	src: url("../fonts/Montserrat-ExtraBold.ttf")
+	font-style: normal
+	font-weight: 800
