--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -2,24 +2,28 @@
 @import "fonts"
 
 body 
+	min-width: 320px
 	font-family: $font-main
 	font-size: 15px
 
-
+// --------------------------------header-3------------------------------------------
 .header-3 
 	border-top: 1px solid #e8e6e6
 	border-bottom: 1px solid #e8e6e6
+	margin-bottom: 20px
 
 .header-3-wrap
 	display: flex
 	flex-wrap: wrap
+	align-items: center
+	justify-content: space-between
 
 .catalog 	
-	width: 325px
+	width: 28.5%
 	margin: -1px 0px
 	position: relative
 	font-family: $font-main
-	padding: 25px 34px
+	padding: 22px 34px
 	color: #262626
 	background-color: #ffcb00
 	cursor: pointer
@@ -57,6 +61,7 @@ body
 
 .catalog__menu	
 	display: none
+
 	position: absolute
 	z-index: 1000
 	top: 100%
@@ -82,14 +87,15 @@ body
 .catlog__category 
 	position: relative
 	display: block
-	padding: 25px 35px 25px 80px
+	padding: 20px 35px 20px 86px
 	color: #262626
 	text-decoration: none
+	background-color: #fff
 	&:before 
 		content: ""
 		position: absolute
 		top: 50%
-		left: 20px
+		left: 30px
 		transform: translateY(-50%)
 	&:after
 		content: ""
@@ -138,6 +144,7 @@ body
 	
 .catalog__submenu-wrap 
 	display: none
+
 	width: 815px
 	position: absolute
 	left: 100%
@@ -150,6 +157,7 @@ body
 	justify-content: left
 	margin: 0
 	padding: 0
+	padding-left: 10px
 	list-style: none
 	padding-top: 15px
 	margin-top: -1px
@@ -159,21 +167,294 @@ body
 .catalog__item
 	width: 25%
 	text-align: center
+	padding: 0 13px
+	margin-bottom: 23px
 
 .catalog__item-img
 	margin: 0 auto
-	height: 150px
-	width: 190px
+	height: 135px
+	img 	
+		width: 100%
+
 
 .catalog__item-link
 	color: inherit
 	&:hover 
 		color: #f20f0f
 		text-decoration: none
-		
-.search
+
+.search 
+	position: relative
+	width: 56%
+
+.search__text 
+	width: 100%
+	padding: 11px 45px 11px 15px
+	border: none
+	box-shadow: inset 0px 0px 3px rgba(0, 0, 0, .2)
+	&:focus
+		outline: 1px solid #ffcb00
+	&::placeholder
+		font-size: 13px
+		font-weight: 300
+		color: #a3a3a3
+
+.search__btn
+	position: absolute
+	top: 50%
+	right: 7px
+	transform: translateY(-50%)
+	width: 45px
+	height: 45px
+	background: url("../img/search.png") no-repeat center
+	border: none 
+	&:focus
+		outline: none
 	
-	background-color: red
+.compare 
+	padding: 38px 5px 5px
+	font-size: 9px
+	color: #231f20
+	text-transform: uppercase
+	letter-spacing: 0.05em
+	background: url("../img/compare.png") no-repeat center 6px
+	&:hover 
+		color: inherit
+		text-decoration: none
+
+.cart 
+	position: relative
+	padding: 38px 5px 5px
+	font-size: 9px
+	color: #231f20
+	text-transform: uppercase
+	letter-spacing: 0.05em
+	background: url("../img/cart.png") no-repeat center 6px
+	&:hover 
+		color: inherit
+		text-decoration: none
+
+.cart__quantity 
+	position: absolute
+	top: -2px
+	right: 1px
+	width: 26px
+	height: 26px
+	padding: 3px 0
+	border: 2px solid #fff
+	border-radius: 50%
+	font-size: 12px
+	font-weight: 700
+	text-align: center
+	background-color: #ffcb00
+
+// --------------------------------sales------------------------------------------
+
+.section-title 
+	display: inline-block
+	padding: 0 15px
+	margin-bottom: 0
+	vertical-align: middle
+	font-size: 25px
+	color: #000
+	text-transform: uppercase
+	background-color: #fff
+
+.section-title-wrap
+	position: relative
+	text-align: center
+	margin-bottom: 25px
+	&::after
+		content: ""
+		position: absolute
+		z-index: -1
+		top: 50%
+		left: 0
+		width: 100%
+		height: 1px
+		background-color: #a6a6a6
+
+.sales__slider
+	height: 540px
+	position: relative
+.slick-prev,
+.slick-next
+	position: absolute
+	z-index: 10
+	top: 200px
+	width: 18px
+	height: 18px
+	border: 2px solid #a6a6a6
+	border-bottom: none
+	border-left: none
+	background-color: transparent
+	font-size: 0
+	outline: none !important
+	cursor: pointer
+	&:hover
+		border-color: #262626
+.slick-prev
+	left: -25px
+	transform: rotate(-135deg)
+.slick-next
+	right: -25px
+	transform: rotate(45deg)
+		
+
+.product
+	position: relative
+	border: 1px solid #e5e5e5
+	transition: .2s
+	&--active:hover
+		box-shadow: 0px 0px 5px rgba(0, 0, 0, .1)
+	&--active:hover .product__btn-fast
+		display: block
+
+.product__hit
+	position: absolute
+	top: -1px
+	left: -1px
+	width: 68px
+	height: 33px
+	line-height: 33px
+	font-size: 13px
+	font-weight: 700
+	color: #414040
+	text-transform: uppercase
+	text-align: center
+	background-color: #ffde00
+	
+.product__img
+	margin-bottom: 5px
+	img
+		width: 100%
+
+.product__description
+	padding: 0 28px 30px
+
+.product__name
+	height: 75px
+	margin-bottom: 0
+	font-size: 17px
+	color: #000
+	
+.product__availability 
+	display: block
+	margin-bottom: 28px
+	text-align: right
+	color: #45a13e
+	&--no
+		color: #e91616
+
+.product__price
+	margin-bottom: 28px
+	float: left
+	font-size: 20px
+	font-weight: 600
+
+.product__compare
+	float: right
+	width: 21px
+	height: 17px
+	margin-top: 7px
+	background: url("../img/compare-sprite.png") -36px -5px
+	cursor: pointer
+	&--active
+		background: url("../img/compare-sprite.png") -5px -5px
+
+.product__btn
+	clear: both
+	margin-bottom: 10px
+
+.btn 
+	display: block
+	width: 100%
+	padding: 12px 10px
+	border: none
+	background-color: #ffcb00
+	font-weight: 600
+	color: #262626
+	cursor: pointer
+	transition: .2s
+	&:hover
+		background-color: #ffde00
+.btn--fast
+	border: 1px solid #ffcb00
+	background-color: #fff
+	&:hover
+		background-color: #ffcb00
+.btn--no-active
+	background-color: #cccccc
+	color: #fff
+	&.btn 
+		cursor: default
+	&:hover
+		background-color: #cccccc
+
+.product__btn-fast
+	display: none
+	
+
+// --------------------------------video------------------------------------------
+
+.video__slider
+	position: relative
+	margin: 0 -15px
+	.slick-prev,
+	.slick-next
+		top: 70px
+	.slick-prev
+		left: -10px
+	.slick-next
+		right: -10px
+
+.video__item 
+	position: relative
+	margin: 0 15px
+	&:hover
+		text-decoration: none
+
+.video__img-wrap 
+	position: relative
+
+.video__play
+	position: absolute
+	top: 50%
+	left: 50%
+	transform: translate(-50%, -50%)
+	width: 56px
+	height: 56px
+	border: 2px solid #ffffff
+	border-radius: 50%
+	transition: .2s
+	&:hover
+		border-color: #ffcb00
+		&::after
+			border-color: transparent transparent transparent #ffcb00
+
+	&::after
+		content: ""
+		position: absolute
+		top: 50%
+		left: 60%
+		transform: translate(-50%, -50%)
+		width: 0
+		height: 0
+		border-style: solid
+		border-width: 14px 0 14px 21px
+		border-color: transparent transparent transparent #ffffff
+		transition: .2s
+
+.video__img 
+	width: 100%
+	margin-bottom: 10px
+
+.video__description 
+		margin: 0
+		font-size: 17px
+		color: #000
+		font-weight: 600
+
 
 @import "media"
      
