Change SASS structure and readme

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -3,7 +3,7 @@
 
 /*==========  Desktop First  ==========*/
 
-/* <1200px (960px) */
+/* ----------------- <1200px (960px) ----------------- */
 +media-breakpoint-down(lg)
   .search
     width: 53%
@@ -28,7 +28,7 @@
     .slick-next
       top: 60px
   
-/* <992px (720px) */
+/* ----------------- <992px (720px) ----------------- */
 +media-breakpoint-down(md)
   .catalog
     width: 35%
@@ -55,7 +55,7 @@
     width: 33.33%
 
 
-/* <768px (540px) */
+/* ----------------- <768px (540px) ----------------- */
 +media-breakpoint-down(sm)
   .catalog
     width: 100%
@@ -79,7 +79,7 @@
   .sales__slider
     height: 520px
 
-/* <576px (auto) */
+/* ----------------- <576px (auto) ----------------- */
 +media-breakpoint-down(xs)
   .sales__slider
     height: auto
