Add header-1 section

--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -1,11 +1,13 @@
 @import "vars"
 @import "fonts"
+@import "mixins/media-breakpoints"
 
 body 
 	min-width: 320px
 	font-family: $font-main
 	font-size: 15px
  
+@import "base/_header-1.sass"
 @import "base/_header-3.sass"
 @import "base/_section-sales.sass"
 @import "base/_section-video.sass"
