--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -103,3 +103,21 @@
 
 /* ≥1200px (1140px) */
 +media-breakpoint-up(xl)
+
+
+// --------------------------------------------------------
+
+
+/*==========  Desktop First  ==========*/
+
+/* <1200px (960px) */
++media-breakpoint-down(lg)
+  
+/* <992px (720px) */
++media-breakpoint-down(md)
+
+/* <768px (540px) */
++media-breakpoint-down(sm)
+
+/* <576px (auto) */
++media-breakpoint-down(xs)
