Dell psd from froject

--- a/app/sass/base/_header-1.sass
+++ b/app/sass/base/_header-1.sass
@@ -37,7 +37,7 @@
     left: 0
     width: 14px
     height: 14px
-    background: url("../../img/header-1__phone.png") no-repeat center
+    background: url("../img/header-1__phone.png") no-repeat center
 
 .header-1__phone-number
   font-size: 15px
@@ -60,7 +60,7 @@
     left: 0
     width: 22px
     height: 20px
-    background: url("../../img/header-1__user.png") no-repeat -52px -10px
+    background: url("../img/header-1__user.png") no-repeat -52px -10px
   a
     color: #d6d6d6
     &:hover 
