Added bunner section

--- a/app/sass/base/_header-3.sass
+++ b/app/sass/base/_header-3.sass
@@ -19,7 +19,7 @@
 	background-color: #ffcb00
 	cursor: pointer
 
-.catalog__humburger 
+.hamburger 
 	position: relative
 	display: inline-block
 	vertical-align: middle
