--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -8,7 +8,9 @@ body
 	font-size: 15px
  
 @import "base/_header-1.sass"
+@import "base/_header-2.sass"
 @import "base/_header-3.sass"
+@import "base/_section-banner.sass"
 @import "base/_section-sales.sass"
 @import "base/_section-video.sass"
 
