--- a/app/sass/base/_section-video.sass
+++ b/app/sass/base/_section-video.sass
@@ -1,3 +1,6 @@
+.video 
+	margin-bottom: 50px
+
 .video__slider
 	position: relative
 	margin: 0 -15px
@@ -55,3 +58,20 @@
 		font-size: 17px
 		color: #000
 		font-weight: 600
+
+
+/*==========  Desktop First  ==========*/
+
+/* <1200px (960px) */
++media-breakpoint-down(lg)
+  
+/* <992px (720px) */
++media-breakpoint-down(md)
+
+/* <768px (540px) */
++media-breakpoint-down(sm)
+	.video 
+		margin-bottom: 20px
+
+/* <576px (auto) */
++media-breakpoint-down(xs)
