--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -10,9 +10,14 @@ body
 @import "base/_header-1.sass"
 @import "base/_header-2.sass"
 @import "base/_header-3.sass"
+
 @import "base/_section-banner.sass"
 @import "base/_section-sales.sass"
 @import "base/_section-video.sass"
+@import "base/_section-brands.sass"
+@import "base/_section-about.sass"
+
+@import "base/footer.sass"
 
 @import "media"
      
