--- a/app/sass/base/_footer.sass
+++ b/app/sass/base/_footer.sass
@@ -112,12 +112,14 @@
 
 /* <768px (540px) */
 +media-breakpoint-down(sm)
+  .footer-1
+    padding: 15px 0
   .footer__social
     justify-content: space-around
     margin-bottom: 25px
 
   .footer__titile
-    margin-bottom: 10px
+    margin-bottom: 15px
     margin-right: 0
 
   .footer__list
