--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -33,3 +33,9 @@
 	src: url("../fonts/Montserrat-ExtraBold.ttf")
 	font-style: normal
 	font-weight: 800
+
+@font-face 
+	font-family: "Fontello"
+	src: url("../fonts/fontello.ttf")
+	font-style: normal
+	font-weight: normal
