--- a/app/sass/base/_footer.sass
+++ b/app/sass/base/_footer.sass
@@ -27,16 +27,31 @@
     font-weight: 300
 
 .footer__social
+  
   display: flex
   justify-content: space-between
+  font-family: "Fontello"
+  font-size: 25px
+  text-align: center
 
 .footer__social-item
+  position: relative
   width: 50px
   height: 50px
   border: 1px solid #86868f
   transition: .2s
+  &::before 
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    color: #86868f
+    transition: .2s
   &:hover
     border-color: #ffcb00
+    &::before 
+      color: #ffcb00
+  
 
 .footer__list
   width: 140px
